--- a/Shopping List App/Base.lproj/Main.storyboard
+++ b/Shopping List App/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                                 <state key="normal" title="Cancel">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="CancelButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q3T-id-yCz"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ntT-N2-SgG">
                                 <rect key="frame" x="20" y="656" width="114" height="60"/>
@@ -40,6 +43,9 @@
                                 <state key="normal" title="Save">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="SaveButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZPx-gR-A5q"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ABA-6m-0Fs">
                                 <rect key="frame" x="20" y="209" width="189" height="30"/>
@@ -47,9 +53,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="ItemsList:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="2cr-0j-gWE"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Otj-BZ-E4A">
                                 <rect key="frame" x="20" y="276" width="189" height="30"/>
@@ -57,9 +60,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="ItemsList:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="f3a-dO-2Ji"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rbt-1u-bBy">
                                 <rect key="frame" x="20" y="340" width="189" height="30"/>
@@ -67,9 +67,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="ItemsList:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="Bwq-xO-Dla"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mG9-sK-xis">
                                 <rect key="frame" x="20" y="402" width="189" height="30"/>
@@ -77,9 +74,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="ItemsList:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="2ns-S5-lqV"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bet-6u-LTA">
                                 <rect key="frame" x="20" y="462" width="189" height="30"/>
@@ -87,9 +81,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="ItemsList:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="N7y-RK-ATs"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LPl-oJ-YoJ">
                                 <rect key="frame" x="20" y="521" width="199" height="30"/>
@@ -97,9 +88,6 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="ItemsList:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="o83-bA-KWC"/>
-                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Create a New List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLQ-zj-opi">
                                 <rect key="frame" x="20" y="92" width="221" height="37"/>
@@ -175,6 +163,20 @@
                         <color key="backgroundColor" red="1" green="0.85034912526693951" blue="0.56686120885781599" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outletCollection property="Items" destination="ABA-6m-0Fs" collectionClass="NSMutableArray" id="IlI-Dm-j0v"/>
+                        <outletCollection property="Items" destination="Otj-BZ-E4A" collectionClass="NSMutableArray" id="jtH-yv-TGs"/>
+                        <outletCollection property="Items" destination="rbt-1u-bBy" collectionClass="NSMutableArray" id="439-NV-a4G"/>
+                        <outletCollection property="Items" destination="mG9-sK-xis" collectionClass="NSMutableArray" id="bce-rD-fK0"/>
+                        <outletCollection property="Items" destination="Bet-6u-LTA" collectionClass="NSMutableArray" id="yho-uH-PD2"/>
+                        <outletCollection property="Items" destination="LPl-oJ-YoJ" collectionClass="NSMutableArray" id="n6Y-Ur-2vn"/>
+                        <outletCollection property="Items" destination="i19-9v-x9f" collectionClass="NSMutableArray" id="2aZ-GE-DZ1"/>
+                        <outletCollection property="Items" destination="t6f-oT-C8U" collectionClass="NSMutableArray" id="pSO-s2-phd"/>
+                        <outletCollection property="Items" destination="uca-r0-oio" collectionClass="NSMutableArray" id="MRo-7F-xF6"/>
+                        <outletCollection property="Items" destination="UpV-Sq-dfL" collectionClass="NSMutableArray" id="308-LO-kbk"/>
+                        <outletCollection property="Items" destination="0vj-bl-YOt" collectionClass="NSMutableArray" id="lcV-5E-ht4"/>
+                        <outletCollection property="Items" destination="on3-xF-hSB" collectionClass="NSMutableArray" id="tZC-bg-1oM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
